[tool.poetry]
name = "langchain-experiments"
version = "0.1.0"
description = "A project utilizing LangChain and related libraries."
authors = ["VJ <v-j@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
cohere = "^5.13.5"
ipykernel = "^6.29.5"
langchain = "^0.1.0"  # Replace with the latest version available on PyPI
openai = "^0.27.10"  # For OpenAI API integration
psycopg2 = "^2.9.6"  # PostgreSQL support
python = "3.11.8"
tiktoken = "^0.4.0"  # Tokenization for LangChain

[tool.poetry.scripts]
create-experiment = "scripts.create_experiment:create_experiment"
start-notebook = "scripts.start_jupyter:start_jupyter"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
